fixed bugs found during project review
- fixed a bug where payment info were not showing when JS was disabled
- fixed a bug where user now can only not select an event that occurs on the same day AND same time

--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,6 @@ button:hover {
 	background: #184c62;
 }
 
-#paypal,
-#credit-card,
-#bitcoin{
-	display: none;
-}
 .error-message{
 	display: block;
 	margin-bottom:10px;
